--- a/www/development.html
+++ b/www/development.html
@@ -131,8 +131,7 @@
 
 			<h2>Versioning</h2>
 			<p>Git master branch has tags '<i>version-x</i>', which you may use to switch to specific framework version.
-				There is also the GitHub <a href="https://github.com/kogarashisan/LiquidLava/downloads/">Downloads</a> section,
-				which contains versions, uploaded by the author.</p>
+				See also the GitHub <a href="https://github.com/kogarashisan/LiquidLava/releases/">releases</a> page.</p>
 			<p>In case of any breaking changes, there will be no backward compatibility. Instead, you will be given detailed
 			upgrade instructions. See the <a href="changelog.html">Changelog</a>.</p>
 
