--- a/www/tasks.html
+++ b/www/tasks.html
@@ -244,7 +244,7 @@
 <li><span class="tag-Feature">Feature</span><span class="tag-Performance">Performance</span> currently, each time any variable is referenced in argument's source code - it creates a new binding config.<br/>Parser must unite bindings to the same variable referenced multiple times.</li>
 <li><span class="tag-Feature">Feature</span> static arguments must have their value in configs</li>
 <li><span class="tag-Refactoring">Refactoring</span> result config always has "modifiers" and "active_modifiers" properties. They are not always needed.</li>
-<li><span class="tag-Refactoring">Refactoring</span> remove the dn() operator. It's existence is not possible with current architecture.</li>
+<li><span class="tag-Refactoring">Refactoring</span> remove the dn() operator. It's existence is not possible with current architecture.<br/>Finish the up() operator, or remove it also.</li>
 </ul>
 <h3>System/App.class.js</h3>
 <ul>
