site: added the 'Hello' example

--- a/www/examples.html
+++ b/www/examples.html
@@ -40,6 +40,7 @@
 	<script>
 
 		var LavaExamples = [
+			{name: 'Hello', title: 'Hello'},
 			{name: 'draggable', title: 'Draggable'},
 			{name: 'Circles', title: 'Draggable circles editor'},
 			{name: 'Panel1', title: 'Panel 1'},
