--- a/www/versions/master.html
+++ b/www/versions/master.html
@@ -1,1 +1,6 @@
-No changes yet
+<p>Renamed Lava.data.Enumerable -> Lava.system.Enumerable</p>
+<p>ObjectParser: allowed external paths now must start with 'Lava'</p>
+<p>Fixed:</p>
+<ul>
+	<li>Animation class now properly generates it's GUIDs</li>
+</ul>
