--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 			var demo_module = Lava.app.getModule('DemoTree');
 			demo_module.loadRecords(ExampleData.example_tree);
 
-			var tree_records = new Lava.data.Enumerable(demo_module.getAllRecords());
+			var tree_records = new Lava.system.Enumerable(demo_module.getAllRecords());
 			tree_records.filter(function(record) {
 				return !record.get('parent')
 			});
 
 			main_page_widget.set('tree_records', tree_records);
-			main_page_widget.set('all_tree_records', new Lava.data.Enumerable(demo_module.getAllRecords()));
+			main_page_widget.set('all_tree_records', new Lava.system.Enumerable(demo_module.getAllRecords()));
 			main_page_widget.inject($('main_page_demo_container'), 'Top');
 			Firestorm.Element.remove(Firestorm.getElementById('initial_loading_indicator'));
 
@@ -138,7 +138,7 @@
 		<h1>LiquidLava framework</h1>
 		<em>When art is beautiful</em>
 		<a class="btn btn-gray" href="https://github.com/kogarashisan/LiquidLava/releases">
-			<i class="glyphicon glyphicon-download-alt"></i> v0.2.x-alpha
+			<i class="glyphicon glyphicon-download-alt"></i> v0.2-alpha
 		</a>
 		<div class="main-page-follow-container" style="visibility: hidden" id="main_page_follow_container">
 			<!-- tweet -->
