--- a/www/changelog.html
+++ b/www/changelog.html
@@ -40,6 +40,7 @@
 	<script>
 		var LavaVersions = [
 			{name: 'master'},
+			{name: '0.2.2'},
 			{name: '0.2.1'}
 		];
 		window.addEvent('load', function() {
