small improvement in Calendar widget

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 	</div>
 
 	<h1>Demo</h1>
+	<p>These widgets were built using the Lava framework.</p>
 	<ul>
 		<li>Click on nodes to expand them. Observe changes in the table.</li>
 		<li>Click on table rows to toggle editing. You will see changes in the tree.</li>
