refactorings in Data layer, build scripts

--- a/www/about.html
+++ b/www/about.html
@@ -119,9 +119,8 @@
 			</p>
 
 			<h2>Make a deal</h2>
-			<p>
-				You are welcome to contact me via GitHub. Currently, I'm open to any contacts for any reason.
-			</p>
+			<p>Currently, I'm open to any contacts for any reason. You are welcome to contact me via GitHub or email: </p>
+			<p>kogarashisan1 [atsign] gmail [dot] com. </p>
 
 		</div>
 
