--- a/www/versions/master.html
+++ b/www/versions/master.html
@@ -1,6 +1,13 @@
-<p>Renamed Lava.data.Enumerable -> Lava.system.Enumerable</p>
-<p>ObjectParser: allowed external paths now must start with 'Lava'</p>
-<p>Fixed:</p>
+<p>[Feature] Calendar now does not allow text selection when clicking on a day.</p>
+
+<p>[Refactoring] Renamed Lava.data.Enumerable -> Lava.system.Enumerable</p>
+<p>[Refactoring] ObjectParser: allowed external paths now must start with 'Lava'</p>
+<p>[Refactoring] Lots of refactorings in Data layer, added Guid field</p>
+
+<p>Fixes:</p>
 <ul>
 	<li>Animation class now properly generates it's GUIDs</li>
+	<li>TemplateParser now correctly parses the &lt;script&gt; tags</li>
+	<li>TemplateParser: now concatenates adjacent strings</li>
+	<li>Fixed some bugs in Collection and Record fields</li>
 </ul>
