--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<h1>LiquidLava framework</h1>
 		<em>When art is beautiful</em>
 		<a class="btn btn-gray" href="https://github.com/kogarashisan/LiquidLava/releases">
-			<i class="glyphicon glyphicon-download-alt"></i> v0.2-alpha
+			<i class="glyphicon glyphicon-download-alt"></i> Download
 		</a>
 		<div class="main-page-follow-container" style="visibility: hidden" id="main_page_follow_container">
 			<!-- tweet -->
