--- a/www/tasks.html
+++ b/www/tasks.html
@@ -332,6 +332,10 @@
 <ul>
 <li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> when panels are collapsed, but the body stays in DOM - they should sleep() their content</li>
 </ul>
+<h3>Accordion</h3>
+<ul>
+<li><span class="tag-p5">p5</span><span class="tag-Feature">Feature</span> collapseAll()</li>
+</ul>
 <h3>TreeView</h3>
 <ul>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> must not contain Morph containers inside it</li>
@@ -340,6 +344,7 @@
 <ul>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> there must be a sugar which parses it's content (optgroup and option tags)<span class="task-comment">it will be custom function, which is independent from Sugar class.<br/> Schema will define where to put the result. <br/>
  Requires Sugar modification.</span></li>
+<li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span> browser fixes and code that accesses elements should be in Firestorm</li>
 </ul>
 <h3>DropDown</h3>
 <ul>
