--- a/www/versions/0.3.0.html
+++ b/www/versions/0.3.0.html
@@ -1,4 +1,4 @@
-<p>Feature</p>
+<p>Feature:</p>
 <ul>
 	<li>Foreach view now supports sorting and filtering of it's values, via external callback</li>
 	<li>Calendar widget now prevents text selection when clicking on a day</li>
