--- a/www/versions/master.html
+++ b/www/versions/master.html
@@ -1,1 +1,15 @@
-<p>No changes yet</p>
+<h3>Feature</h3>
+<p>-</p>
+
+<h3>Refactoring</h3>
+<p>Minor refactorings and improvements, JSDoc fixes.</p>
+<p>Most classes, that implemented mixins - now extend them.</p>
+<p>Renamed in Enumerable:</p>
+<ul>
+	<li>remove -> removeValue</li>
+	<li>include -> includeValue</li>
+	<li>contains -> containsValue</li>
+</ul>
+
+<h3>Fixes</h3>
+<p>Fixed a serialization issue in Lava.Serializer.</p>
